...
                    android:layout_weight="1"
                    android:text="Profile"
                    android:textSize="32sp"
                    android:fontFamily="sans-serif-medium" />

                <Button
                    android:id="@+id/settingsButton"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Settings"
                    android:textColor="#3B8F40" />

...
